# Platform

./: .editorconfig  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  REUSE.toml  compose-cache.json  compose.yaml  docker-compose.platform.yaml  docker-compose.yaml  docker-compose.yml  flake.nix  pyproject.toml  requirements-dev.txt  requirements.txt  setup-broker.sh  setup.sh
.devcontainer/: .env  compose.yaml  devcontainer.json  docker-compose.extend.yaml  docker-compose.extend.yml
.github/workflows/: docs.yaml  pre-commit.yaml  python.yaml  reuse.yaml  test-docker.yaml  test-python.yaml  test.yaml
.reuse/: dep5
docs/: Dockerfile  access.md  api.md  api.rst  architecture.md  conf.py  configuration.md  data_integrity.drawio  data_signing.drawio  development.md  examples.md  gateway.md  index.md  installation.md  models.rst  platform.md  platform_architecture.drawio
docs/_static/: data_integrity.drawio  data_signing.drawio  example_env.conf  notifier.drawio  platform_architecture.drawio
docs/_static/scripts/: custom.js
docs/_templates/: layout.html
docs/_templates/autosummary/: module.rst
docs/images/: Platform Architektur.jpg.license
etc/: README.md
etc/minio/: setup.py  setup.sh
etc/mosquitto/: mosquitto.conf  mosquitto.conf.default
etc/registry/: config.yml  htpasswd
etc/timestamp-server/: config.yaml
etc/traefik/: dynamic.yaml  traefik.yaml
examples/: job.yaml  recorder.yaml
images/examples/hb-monitor/: Dockerfile  pyproject.toml
images/examples/hb-monitor/hb_monitor/: main.py
images/examples/job-worker/: Dockerfile  pyproject.toml  worker.py
images/examples/job-worker/job_worker/: main.py
images/examples/streaming-worker/: Dockerfile  pyproject.toml  worker.py
images/examples/streaming-worker/streaming_worker/: main.py
images/landing-page/: Dockerfile  index.html
images/minio-setup/: Dockerfile
python/: .gitignore  pyproject.toml  requirements.txt
python/seguro/: __init__.py
python/seguro/common/: MQTTClient.py  MQTTclient.py  S3Storage.py  __init__.py  broker.py  config.py  example.py  helperFunctions.py  test_broker.py  test_config.py  test_store.py
python/seguro/platform/: __init__.py  config.py  test_config.py
s3/config/jobs/: demo-data.yaml  recorder.yaml
scripts/: generate-compose-cache.py  generate-models.sh  reset.sh  setup-minio.sh  setup-mosquitto-acl.sh  setup-mosquitto-dynsec-config.sh  setup-mosquitto-dynsec-init.sh  setup-mosquitto.sh  setup-pki.sh
seguro/: __init__.py
seguro/apprise_service/: main.py
seguro/commands/acl_syncer/: broker.py  broker_test.py  main.py  model.py  store.py
seguro/commands/demo_data/: main.py
seguro/commands/fiware_connector/: main.py
seguro/commands/flex_marketing_service/: main.py  test.py
seguro/commands/heartbeat_monitor/: main.py
seguro/commands/heartbeat_sender/: main.py
seguro/commands/notebook_executor/: main.py
seguro/commands/notifier/: main.py  model.py
seguro/commands/protobuf_subscriber/: main.py
seguro/commands/recorder/: main.py  recorder.py
seguro/commands/sample_aggregator/: main.py
seguro/commands/scheduler/: __init__.py  compose.py  compose_model.py  job.py  main.py  model.py  scheduler.py
seguro/commands/setup/: minio.py
seguro/commands/signature_recorder/: main.py
seguro/commands/signature_sender/: main.py  sign_tpm.py
seguro/commands/signature_verifier/: main.py
seguro/commands/worker_test/: main.py
seguro/common/: __init__.py  broker.py  config.py  job.py  logger.py  notify.py  openssl.py  store.py  test_broker.py  test_config.py  test_logger.py  test_notify.py  test_openssl.py  test_store.py
seguro/demo_data/: main.py
seguro/heartbeat_sender/: main.py
seguro/notifier/: main.py
seguro/recorder/: main.py  recorder.py
seguro/scheduler/: __init__.py  compose.py  job.py  main.py  scheduler.py
seguro/setup/: minio.py
seguro/signature_recorder/: main.py
seguro/signature_sender/: main.py
store/config/: notifications.yaml  notifications.yaml.example
store/config/acls/: devices.yaml  services.yaml
store/config/jobs/: acl-syncer.yaml  acl-syncer.yaml.disabled  demo-data-villas.yaml  demo-data.yaml  example-job-worker.yaml  example-streaming-worker.yaml  flex-marketing-service.yaml  job.yaml.example  notebook-executor.yaml  notebook_executor.yaml  notifier.yaml  recorder.yaml  signature-recorder.yaml  test-measurement.yaml  test-periodic.yaml
store/config/villas/: demo-data.json
store/notebooks/: example.ipynb
