# SPDX-FileCopyrightText: 2023 Steffen Vogel, OPAL-RT Germany GmbH
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seguro-platform"
authors = [
  { name="Steffen Vogel", email="steffen.vogel@opal-rt.com" },
  { name="Felix Wege", email="felix.wege@eonerc.rwth-aachen.de" },
]
description = "Common Python helpers for accessing the SEGuRo platform"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "apprise==1.5.0",
  "aws-logging-handlers==2.0.5",
  "boto3==1.26.142",
  "django-environ==0.10.0",
  "docker==6.1.3",
  "minio==7.1.14",
  "paho-mqtt==1.6.1",
  "python-slugify==8.0.1",
  "pyyaml==6.0",
  "rfc3161ng==2.1.3",
  "schedule==1.2.0",
]

dynamic = ["version","readme"]

[project.optional-dependencies]
dev = [
  "flake8==6.0.0",
  "pre-commit==3.3.1",
  "pytest==7.3.1",
]

[project.scripts]
apprise_service = "seguro.apprise_service.main:main"
minio-setup = "seguro.setup.minio:main"
scheduler = "seguro.scheduler.main:main"
recorder = "seguro.recorder.main:main"
demo-data = "seguro.demo_data.main:main"
signature-sender = "seguro.signature_sender.main:main"

[project.urls]
"Homepage" = "https://github.com/SEGuRo-Projekt/Plattform"
"Bug Tracker" = "https://github.com/SEGuRo-Projekt/Plattform/issues"

[tool.setuptools.packages.find]
include=["seguro.*"]

[tool.setuptools.dynamic]
version = {attr = "seguro.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 79

[tool.pytest.ini_options]
markers = [
  "broker",
  "store",
  "logger",
  "config"
]
