# SPDX-FileCopyrightText: 2023 Steffen Vogel, OPAL-RT Germany GmbH
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
authors = [
  "Steffen Vogel <steffen.vogel@opal-rt.com>",
  "Felix Wege <felix.wege@eonerc.rwth-aachen.de>",
]
name = "seguro-platform"
version = "0.1.0"
description = "Common Python helpers for accessing the SEGuRo platform"
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "seguro"}]

[tool.poetry.scripts]
poetry = "poetry.console.application:main"

apprise_service = "seguro.apprise_service.main:main"
minio-setup = "seguro.setup.minio:main"
scheduler = "seguro.scheduler.main:main"
recorder = "seguro.recorder.main:main"
demo-data = "seguro.demo_data.main:main"
signature-sender = "seguro.signature_sender.main:main"
signature-recorder = "seguro.signature_recorder.main:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/SEGuRo-Projekt/Platform"
"Bug Tracker" = "https://github.com/SEGuRo-Projekt/Platform/issues"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
markers = ["broker", "store", "logger", "config"]

[tool.poetry.dependencies]
python = "^3.11"
apprise = "^1.7.2"
boto3 = "^1.34.50"
django-environ = "^0.11.2"
docker = "^7.0.0"
minio = "^7.2.4"
paho-mqtt = "^2.0.0"
python-slugify = "^8.0.4"
pyyaml = "^6.0.1"
rfc3161ng = "^2.1.3"
schedule = "^1.2.1"
pandas = {extras = ["excel", "parquet"], version = "^2.2.1"}
cryptography = "42.0.3"
aws-logging-handlers = "^2.0.5"
s3fs = "^2024.3.1"
fsspec = "^2024.3.1"
villas-python = {git = "https://github.com/VILLASframework/node.git", rev = "b66b125ea192faa876fc18ab64fcc798dcdb17ce", subdirectory = "python"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ipython = "^8.22.1"
flake8 = "^7.0.0"
black = "^24.2.0"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
types-pyyaml = "^6.0.12.20240311"
types-python-slugify = "^8.0.2.20240310"
pandas-stubs = "^2.2.1.240316"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinx-autobuild = "^2024.2.4"
sphinx-inline-tabs = "^2023.4.21"
sphinx-autoapi = "^3.0.0"
furo = "^2024.1.29"
myst-parser = "^2.0.0"
sphinxext-opengraph = "^0.9.1"
sphinxcontrib-bibtex = "^2.6.2"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
