# SPDX-FileCopyrightText: 2023 Steffen Vogel, OPAL-RT Germany GmbH
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seguro-platform"
authors = [
  { name="Steffen Vogel", email="steffen.vogel@opal-rt.com" },
  { name="Felix Wege", email="felix.wege@eonerc.rwth-aachen.de" },
]
description = "Common Python helpers for accessing the SEGuRo platform"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]


[project.urls]
"Homepage" = "https://github.com/SEGuRo-Projekt/Plattform"
"Bug Tracker" = "https://github.com/SEGuRo-Projekt/Plattform/issues"

[tool.setuptools]
packages = ["seguro.platform"]

[tool.setuptools.dynamic]
version = {attr = "seguro.platform.__version__"}
readme = {file = ["README.rst", "USAGE.rst"]}
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 79
