# SPDX-FileCopyrightText: 2023 Steffen Vogel, OPAL-RT Germany GmbH
# SPDX-License-Identifier: Apache-2.0

[project]
name = "seguro-example-streaming-worker"
version = "0.1.0"

dependencies = [
    "seguro-platform@git+https://github.com/SEGurO-Projekt/Platform"
]

requires-python = ">= 3.11"

[project.scripts]
streaming-worker = "streaming_worker.main:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["streaming_worker"]
